--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,8 @@
 	<script>try{Typekit.load();}catch(e){}</script> 
 	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">	
 	<link rel="stylesheet" href="assets/css/styles.css">
-</head>
+
+<link href="https://fonts.googleapis.com/css?family=Raleway|Pathway+Gothic+One|Droid+Sans|Roboto" rel="stylesheet"></head>
 
 <body>
 
