Home - Playing with nav type treatments

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,49 @@
 
 			<section class="projects">
 			  	<h3>Projects</h3>
-			  	<p>Web projects marked with an asterisk (*) have undergone updates or gone offline since Annette's involvement.</p>			
+			  	<div class="projects-container">
+			  		
+			  		<figure>
+			  			<div class="img-container">
+			  				<img src="assets/img/tb-woodchuck.jpg" alt="Thumbnail image of website">
+			  			</div>
+			  			<figcaption>
+			  				<h4>The caption</h4>
+			  				<p>Description about the project here.</p>
+			  			</figcaption>
+			  		</figure>
+
+			  		<figure>
+			  			<div class="img-container">
+			  				<img src="assets/img/tb-woodchuck.jpg" alt="Thumbnail image of website">
+			  			</div>			  
+						<figcaption>
+			  				<h4>The caption</h4>
+			  				<p>Description about the project here.</p>
+			  			</figcaption>
+			  		</figure>
+
+			  		<figure>
+			  			<div class="img-container">
+			  				<img src="assets/img/tb-woodchuck.jpg" alt="Thumbnail image of website">
+			  			</div>
+			  			<figcaption>
+			  				<h4>The caption</h4>
+			  				<p>Description about the project here.</p>
+			  			</figcaption>
+			  		</figure>	
+
+			  		<figure>
+			  			<div class="img-container">
+			  				<img src="assets/img/tb-woodchuck.jpg" alt="Thumbnail image of website">
+			  			</div>			  
+						<figcaption>
+			  				<h4>The caption</h4>
+			  				<p>Description about the project here.</p>
+			  			</figcaption>
+			  		</figure>	
+
+			  	</div>		
 			</section>
 
 			<section class="contact">
