Home - Adding portfolio blocks

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Annette Arabasz - Front End Developer and Designer - Boston</title>
+  <title>Annette Arabasz | Front End Developer and Designer</title>
 	<script src="//use.typekit.net/zko6yfr.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script> 
 	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">	
@@ -19,8 +19,7 @@
 		<div class="sidebar">
 
 			<header>
-				<h1>Annette Arabasz</h1>
-			 	<h2>Front End Developer</h2>
+				<h1>Annette Arabasz <span>Front End Developer</span></h1>
 			</header>	
 
 			<nav>
@@ -37,60 +36,99 @@
 		<div class="content">
 
 			<section class="about">
-				<h3>About Me</h3>
-			  	<p>My name is Annette Arabasz and I am a Front End Developer in Boston. My background is in design, so I most enjoy projects that consider both aesthetics and useability of a website. I currently work at <a href="http://madpow.com" target="_blank">Mad*Pow</a> as a managing director and developer.</p>
-			  	<p>My other interests include beer sampling, collecting absurdly hot sauce and hiking with <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>, my awesome Corgi.</p>
+				<h2>About Me</h2>
+			  	<p>My name is Annette Arabasz and I am a Front End Developer in Boston. My background is in visual design, so I most enjoy projects that consider both the aesthetics and usability of a website. I currently work at <a href="http://madpow.com" target="_blank">Mad*Pow</a> as a managing director and developer.</p>
+			  	<p>Some of my other interests are beer sampling, collecting absurdly hot sauces and hiking with <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>, my awesome Corgi.</p>
 			</section>
 
+			<section class="skills" style="display: none">
+				<h2>Experience</h2>
+
+				<h3>Positions</h3>
+
+				<ul class="list-positions">
+					<li>Mad*Pow</li>
+					<li>Girl Develop It</li>
+					<li>Isobar</li>
+					<li>Connelly Partners</li>
+				</ul>
+
+				<h3>Languages</h3>
+
+				<ul class="list-skills">
+					<li>HTML</li>
+					<li>CSS (Sass, LESS)</li>
+					<li>JavaScript (jQuery)</li>
+				</ul>
+
+				<h3>Tools and Frameworks</h3>
+				<ul class="list-skills">
+					<li>Wordpress</li>
+					<li>Bootstrap</li>
+					<li>Grunt, NPM</li>
+					<li>Mustache</li>
+				</ul>
+			</section>			
+
 			<section class="projects">
-			  	<h3>Projects</h3>
+			  	<h2>Projects</h2>
+			  	<p>Below is a sampling of projects I have worked on in the last few years.</p>
 			  	<div class="projects-container">
-			  		
+
 			  		<figure>
 			  			<div class="img-container">
-			  				<img src="assets/img/tb-woodchuck.jpg" alt="Thumbnail image of website">
 			  			</div>
 			  			<figcaption>
-			  				<h4>The caption</h4>
-			  				<p>Description about the project here.</p>
+			  				<h4>ESPN Event Wrap-Ups</h4>
+			  				<p>A series of websites summarizing ESPN's major annual events, including the X Games and the ESPYs Awards.</p>
+			  				<ul class="list-tags">
+			  					<li>HTML</li>
+			  					<li>CSS</li>
+			  					<li>jQuery</li>
+			  					<li>Expression Engine</li>
+			  				</ul>
+			  				<p><a href="#">Project Details</a></p>			  				
 			  			</figcaption>
 			  		</figure>
 
 			  		<figure>
 			  			<div class="img-container">
-			  				<img src="assets/img/tb-woodchuck.jpg" alt="Thumbnail image of website">
 			  			</div>			  
 						<figcaption>
-			  				<h4>The caption</h4>
-			  				<p>Description about the project here.</p>
+			  				<h4>HXD Conference</h4>
+			  				<p>Website for the annual Healthcare Experience Design (HXD) Conference.</p>			  				
+			  				<ul class="list-tags">
+			  					<li>HTML</li>
+			  					<li>CSS</li>
+			  					<li>Squarespace</li>
+			  				</ul>			  	
+			  				<p><a href="#">Project Details</a></p>			  							  							
 			  			</figcaption>
 			  		</figure>
 
 			  		<figure>
 			  			<div class="img-container">
-			  				<img src="assets/img/tb-woodchuck.jpg" alt="Thumbnail image of website">
 			  			</div>
 			  			<figcaption>
-			  				<h4>The caption</h4>
-			  				<p>Description about the project here.</p>
+			  				<h4>Pearson Education</h4>
+			  				<p>Pearson's <em>MyLab Writing Space</em> a classroom tool for writing, grading, and grammar guidance.</p>
 			  			</figcaption>
 			  		</figure>	
 
 			  		<figure>
 			  			<div class="img-container">
-			  				<img src="assets/img/tb-woodchuck.jpg" alt="Thumbnail image of website">
 			  			</div>			  
 						<figcaption>
-			  				<h4>The caption</h4>
-			  				<p>Description about the project here.</p>
+			  				<h4>Perfect Health</h4>
+			  				<p>Website for a startup company aimed at making health care a warmer and more empathetic experience.</p>
 			  			</figcaption>
-			  		</figure>	
+			  		</figure>				  					  		
 
 			  	</div>		
 			</section>
 
 			<section class="contact">
-			  	<h3>Email</h3>
+			  	<h2>Contact</h2>
 			  	<p>Email will go here soon.</p>
 			</section>
 		</div>
