Color palette experimentation

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">	
 	<link rel="stylesheet" href="assets/css/styles.css">
 
-<link href="https://fonts.googleapis.com/css?family=Raleway|Pathway+Gothic+One|Droid+Sans|Roboto" rel="stylesheet"></head>
+<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Droid+Sans|Droid+Serif" rel="stylesheet"></head>
 
 <body>
 
@@ -73,56 +73,64 @@
 			<section class="projects">
 			  	<h2>Projects</h2>
 			  	<p>Below is a sampling of projects I have worked on in the last few years.</p>
+			  	<br>
 			  	<div class="projects-container">
+			  		<div class="project">
+				  		<figure>
+				  			<div class="img-container">
+				  			</div>
+				  			<figcaption>
+				  				<h4>ESPN Event Wrap-Ups</h4>
+				  				<ul class="list-tags" style="display: none">
+				  					<li>HTML</li>
+				  					<li>CSS</li>
+				  					<li>jQuery</li>
+				  					<li>Expression Engine</li>
+				  				</ul>
+				  				<p>A series of websites summarizing ESPN's major annual events, including the X Games and the ESPYs Awards.</p>				  				
+				  				<p><a href="#">Project Details</a></p>			  				
+				  			</figcaption>
+				  		</figure>			  			
+			  		</div>
 
-			  		<figure>
-			  			<div class="img-container">
-			  			</div>
-			  			<figcaption>
-			  				<h4>ESPN Event Wrap-Ups</h4>
-			  				<p>A series of websites summarizing ESPN's major annual events, including the X Games and the ESPYs Awards.</p>
-			  				<ul class="list-tags">
-			  					<li>HTML</li>
-			  					<li>CSS</li>
-			  					<li>jQuery</li>
-			  					<li>Expression Engine</li>
-			  				</ul>
-			  				<p><a href="#">Project Details</a></p>			  				
-			  			</figcaption>
-			  		</figure>
+			  		<div class="project">
+				  		<figure>
+				  			<div class="img-container">
+				  			</div>			  
+							<figcaption>
+				  				<h4>HXD Conference</h4>
+				  				<ul class="list-tags" style="display: none">
+				  					<li>HTML</li>
+				  					<li>CSS</li>
+				  					<li>Squarespace</li>
+				  				</ul>			  	
+				  				<p>Website for the annual Healthcare Experience Design (HXD) Conference.</p>			  								  				
+				  				<p><a href="#">Project Details</a></p>			  							  							
+				  			</figcaption>
+				  		</figure>			  			
+			  		</div>
 
-			  		<figure>
-			  			<div class="img-container">
-			  			</div>			  
-						<figcaption>
-			  				<h4>HXD Conference</h4>
-			  				<p>Website for the annual Healthcare Experience Design (HXD) Conference.</p>			  				
-			  				<ul class="list-tags">
-			  					<li>HTML</li>
-			  					<li>CSS</li>
-			  					<li>Squarespace</li>
-			  				</ul>			  	
-			  				<p><a href="#">Project Details</a></p>			  							  							
-			  			</figcaption>
-			  		</figure>
+			  		<div class="project">
+				  		<figure>
+				  			<div class="img-container">
+				  			</div>
+				  			<figcaption>
+				  				<h4>Pearson Education</h4>
+				  				<p>Pearson's <em>MyLab Writing Space</em> a classroom tool for writing, grading, and grammar guidance.</p>
+				  			</figcaption>
+				  		</figure>			  			
+			  		</div>
 
-			  		<figure>
-			  			<div class="img-container">
-			  			</div>
-			  			<figcaption>
-			  				<h4>Pearson Education</h4>
-			  				<p>Pearson's <em>MyLab Writing Space</em> a classroom tool for writing, grading, and grammar guidance.</p>
-			  			</figcaption>
-			  		</figure>	
-
-			  		<figure>
-			  			<div class="img-container">
-			  			</div>			  
-						<figcaption>
-			  				<h4>Perfect Health</h4>
-			  				<p>Website for a startup company aimed at making health care a warmer and more empathetic experience.</p>
-			  			</figcaption>
-			  		</figure>				  					  		
+			  		<div class="project">
+				  		<figure>
+				  			<div class="img-container">
+				  			</div>			  
+							<figcaption>
+				  				<h4>Perfect Health</h4>
+				  				<p>Website for a startup company aimed at making health care a warmer and more empathetic experience.</p>
+				  			</figcaption>
+				  		</figure>				  			
+			  		</div>			  					  					  					  					  		
 
 			  	</div>		
 			</section>
@@ -131,6 +139,9 @@
 			  	<h2>Contact</h2>
 			  	<p>Email will go here soon.</p>
 			</section>
+
+			<a class="secret-page-corner"></a>
+
 		</div>
 
 
