Swapping out icons for More link

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
 				  					<li>Expression Engine</li>
 				  				</ul>
 				  				<p>A series of websites summarizing ESPN's major annual events, including the X Games and the ESPYs Awards.</p>				  				
-				  				<p><a href="#">Project Details</a></p>			  				
+				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
 				  			</figcaption>
 				  		</figure>			  			
 			  		</div>
@@ -105,7 +105,7 @@
 				  					<li>Squarespace</li>
 				  				</ul>			  	
 				  				<p>Website for the annual Healthcare Experience Design (HXD) Conference.</p>			  								  				
-				  				<p><a href="#">Project Details</a></p>			  							  							
+				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
 				  			</figcaption>
 				  		</figure>			  			
 			  		</div>
@@ -117,6 +117,7 @@
 				  			<figcaption>
 				  				<h4>Pearson Education</h4>
 				  				<p>Pearson's <em>MyLab Writing Space</em> a classroom tool for writing, grading, and grammar guidance.</p>
+				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  								  				
 				  			</figcaption>
 				  		</figure>			  			
 			  		</div>
@@ -128,6 +129,7 @@
 							<figcaption>
 				  				<h4>Perfect Health</h4>
 				  				<p>Website for a startup company aimed at making health care a warmer and more empathetic experience.</p>
+				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
 				  			</figcaption>
 				  		</figure>				  			
 			  		</div>			  					  					  					  					  		
