--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Annette Arabasz | Front End Developer and Designer</title>
-	<script src="//use.typekit.net/zko6yfr.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script> 
-	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">	
-	<link rel="stylesheet" href="assets/css/styles.css">
+	<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">	
+	<meta charset="UTF-8">
+  	<meta name="description" content="">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">  
+  	
+  	<title>Annette Arabasz  |  Front End Developer and Designer</title>
 
-<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Droid+Sans|Droid+Serif" rel="stylesheet"></head>
+  	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">	
+  	<link rel="stylesheet" href="assets/css/styles.css">
+  	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Droid+Sans|Droid+Serif" rel="stylesheet">
+</head>
 
 <body>
 
