Projects page added and styled

--- a/app/projects.html
+++ b/app/projects.html
@@ -39,17 +39,10 @@
 
 		<div class="content">
 
-			<section class="about">
-				<h2>About Me</h2>
-			  	<p>My name is Annette Arabasz and I am a Front End Developer in Boston. My background is in visual design, so I love the projects where I can dig into aesthetics and usability. I currently work at <a href="http://madpow.com" target="_blank">Mad*Pow</a> as a managing director and developer.</p>
-			  	<p>Some of my other interests are beer sampling, collecting absurdly hot sauces and hiking with <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>, my awesome Corgi.</p>
-			  	<p>For details about my skills and experience, click <a href="#">here</a>.</p>
-			</section>
+				<h2>Projects</h2>
+				<p>This page contains some recent examples of project work. Please note that due to privacy agreements, not all of my work might be listed here. If there's a specific skill you would like to see an example of, please <a href="contact.html">contact me</a>.</p>
+				<br>
 
-			<section class="projects">
-			  	<h2>Projects</h2>
-			  	<p>Below are two projects that I have worked on recently. To see more projects, click <a href="projects.html">here</a>.</p>
-			  	<br>
 			  	<div class="projects-container">
 			  		<div class="project">
 				  		<figure>
@@ -87,13 +80,33 @@
 				  			</figcaption>
 				  		</figure>			  			
 			  		</div>
-			  	</div>		
-			</section>
 
-			<section class="contact">
-			  	<h2>Contact</h2>
-			  	<p>Email will go here soon.</p>
-			</section>
+			  		<div class="project">
+				  		<figure>
+				  			<div class="img-container">
+				  				<img src="assets/img/projects/tb-pearson-01.jpg" alt="Pearson website thumbnail image">				  				
+				  			</div>
+				  			<figcaption>
+				  				<h4>Pearson Education</h4>
+				  				<p>Pearson's <em>MyLab Writing Space</em> a classroom tool for writing, grading, and grammar guidance.</p>
+				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  								  				
+				  			</figcaption>
+				  		</figure>			  			
+			  		</div>
+
+			  		<div class="project">
+				  		<figure>
+				  			<div class="img-container">
+				  				<img src="assets/img/projects/tb-perfecthealth-01.jpg" alt="Perfect Health website thumbnail image">				  				
+				  			</div>			  
+							<figcaption>
+				  				<h4>Perfect Health</h4>
+				  				<p>Website for a startup company bringing empathy and warmth to the personal healthcare experience.</p>
+				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
+				  			</figcaption>
+				  		</figure>				  			
+			  		</div>			  					  					  					  					  	
+			  	</div>	
 
 			<a class="secret-page-corner"></a>
 
