--- a/app/projects.html
+++ b/app/projects.html
@@ -47,7 +47,7 @@
 			  		<div class="project">
 				  		<figure>
 				  			<div class="img-container">
-				  				<img src="assets/img/projects/tb-espn-01.jpg" alt="ESPN website thumbnail image">
+				  				<a href="project-espn.html"><img src="assets/img/projects/tb-espn-01.jpg" alt="ESPN website thumbnail image"></a>
 				  			</div>
 				  			<figcaption>
 				  				<h4>ESPN Event Wrap-Ups</h4>
@@ -58,11 +58,12 @@
 				  					<li>Expression Engine</li>
 				  				</ul>
 				  				<p>A series of websites summarizing ESPN's major annual events, including the X Games and the ESPYs Awards.</p>				  				
-				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
+				  				<p><a href="project-espn.html">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
 				  			</figcaption>
 				  		</figure>			  			
 			  		</div>
 
+<!--
 			  		<div class="project">
 				  		<figure>
 				  			<div class="img-container">
@@ -105,7 +106,8 @@
 				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
 				  			</figcaption>
 				  		</figure>				  			
-			  		</div>			  					  					  					  					  	
+			  		</div>
+			  		-->			  					  					  					  					  	
 			  	</div>	
 
 			<a class="secret-page-corner"></a>
