Adding first portfolio piece images

--- a/app/skills.html
+++ b/app/skills.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
+	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 	<meta charset="UTF-8">
   	<meta name="description" content="">
@@ -42,7 +59,7 @@
 			<section class="skills">
 				<h2>Résumé</h2>
 				<p>Here you'll find a summary of my professional experience. You can also download my résumé in .PDF format using the link below.
-				<p><a href="#"><span class="fa fa-file-pdf-o"></span> PDF download</a></p>
+				<p><a href="#"><span class="fa fa-file-pdf-o icon-margin-right"></span>PDF download</a></p>
 				<br>
 
 				<section class="skills-group work-experience">
@@ -165,7 +182,7 @@
 
 					<h4>"Responsive Design Process: Building the Real Web 2.0"</h4>
 					<p>UXPA Boston 2013, presented with Nick Snyder</p>
-					<p><a href="http://www.slideshare.net/AnnetteArabasz/uxpa-boston-2013-responsive-web-design-mad-pow"><span class="fa fa-external-link"></span> View the slide deck.</a></p>						
+					<p><a href="http://www.slideshare.net/AnnetteArabasz/uxpa-boston-2013-responsive-web-design-mad-pow"><span class="fa fa-external-link icon-margin-right"></span>View the slide deck.</a></p>						
 				</section>			
 
 			</section>			
