--- a/app/project-espn.html
+++ b/app/project-espn.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
+	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 	<meta charset="UTF-8">
   	<meta name="description" content="">
@@ -40,49 +57,28 @@
 		<div class="content">
 
 				<h2>ESPN Event Wrap-ups</h2>
-				<p><a href="http://www.espneventwrapups.com"><span class="fa fa-external-link"></span>http://www.espneventwrapups.com</a></p>
-				<p>This is a collection of sites summarizing all the happenings from the <em>X Games</em> and <em>ESPYs Awards</em>, two events that ESPN is well-known for. The primary audience of the sites are the sponsors, who use the website to see how their brand was promoted during each event.</p>
-				<p>Each site contains hundreds of media files from the event, including photos and videos. Sponsors can log in to a password-protected area to view marketing statistic documents.</p>
-				<p>The original version of the site was built in 2012 on the Expression Engine CMS. It was revamped in 2015 using Mustache and Foundation, resulting in a much simpler and easier-to-maintain experience.</p>
 
-				<br>
-				<h3 class="header-tags">Technologies</h4>
   				<ul class="list-tags">
   					<li>HTML</li>
   					<li>CSS</li>
   					<li>jQuery</li>
+  					<li>Expression Engine</li>
   					<li>Mustache</li>
   					<li>Foundation</li>  					
-  				</ul>		
+  				</ul>				
+
+				<p>A collection of sites summarizing the <em>X Games</em> and <em>ESPYs Awards</em>. The primary audience of the sites are event sponsors, who use the website to see how their brand was promoted.</p>
+				<p>Each site contains a large variety of media files from the event, including photos, videos and PDFs. Sponsors can log in to a password-protected area to view marketing statistic documents.</p>
+				<p>The original version of the site was built in 2012 on the Expression Engine CMS. It was revamped in 2015 using Mustache and Foundation, resulting in a much simpler and easier-to-maintain experience.</p>
+
+				<p><a href="http://www.espneventwrapups.com"><span class="fa fa-external-link icon-margin-right"></span>http://www.espneventwrapups.com</a></p>
 
 				<br>
-				<h3>Highlights</h3>
-			  	<div class="project-details-container">
-			  		<div class="project">
-				  		<figure>
-				  			<div class="img-container">
-				  				<img src="assets/img/projects/tb-espn-01.jpg" alt="ESPN website thumbnail image">
-				  			</div>
-				  			<figcaption>
-				  				<h4>Homepage</h4>
 
-				  				<p>A series of websites summarizing ESPN's major annual events, including the X Games and the ESPYs Awards.</p>				  				
-				  			</figcaption>
-				  		</figure>			  			
-			  		</div>
-
-			  		<div class="project">
-				  		<figure>
-				  			<div class="img-container">
-				  				<img src="assets/img/projects/tb-espn-01.jpg" alt="ESPN website thumbnail image">
-				  			</div>			  
-							<figcaption>
-				  				<h4>Interactive Elements</h4>
-				  				<p>Website for a startup company bringing empathy and warmth to the personal healthcare experience.</p>
-				  			</figcaption>
-				  		</figure>				  			
-			  		</div>			  					  					  					  					  	
-			  	</div>	
+				<h3>Screenshots</h3>
+				<figure class="project-screenshot">
+					<a href="http://www.espneventwrapups.com/winter-xgames-2012"><img src="assets/img/projects/full-espn-01.jpg" alt="ESPN website screenshot"></a>
+				</figure>
 
 			<a class="secret-page-corner"></a>
 
